# rmk

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_zh.md  flake.nix  plan.md  plan_zh.md  rynk-lock-design.md
.config/: nextest.toml
.github/ci/: _lib.sh  bloat-report.sh  check.sh  discover.sh  format.sh  host.sh  test.sh
.github/workflows/: ci.yml  user_build.yml
docs/: .prettierignore  package.json  prettier.config.ts  rspress.config.ts
docs/scripts/: format-rspress-markdown.mjs
examples/use_config/esp32_ble_split/: Cargo.toml  keyboard.toml
examples/use_config/esp32c3_ble/: Cargo.toml  keyboard.toml
examples/use_config/esp32c6_ble/: Cargo.toml  keyboard.toml
examples/use_config/esp32h2_ble/: Cargo.toml  keyboard.toml
examples/use_config/esp32s3_ble/: Cargo.toml  keyboard.toml
examples/use_config/nrf52810_ble/: Cargo.toml
examples/use_config/nrf52832_ble/: Cargo.toml  keyboard.toml  vial.json
examples/use_config/nrf52840_ble/: Cargo.toml  keyboard.toml
examples/use_config/nrf52840_ble_split/: Cargo.toml  keyboard.toml  vial.json
examples/use_config/nrf52840_ble_split_direct_pin/: keyboard.toml
examples/use_config/nrf52840_ble_split_dongle/: Cargo.toml  keyboard.toml
examples/use_config/nrf52840_embassy_boot/: Cargo.toml  keyboard.toml
examples/use_config/pi_pico_w_ble/: Cargo.toml  keyboard.toml
examples/use_config/pi_pico_w_ble_split/: Cargo.toml  keyboard.toml
examples/use_config/rp2040/: keyboard.toml
examples/use_config/rp2040_dfu_split/: Cargo.toml  build.rs  keyboard.toml
examples/use_config/rp2040_dfu_split/.cargo/: config.toml
examples/use_config/rp2040_direct_pin/: Cargo.toml  keyboard.toml
examples/use_config/rp2040_embassy_boot/: Cargo.toml  keyboard.toml
examples/use_config/rp2040_oled/: Cargo.toml  keyboard.toml
examples/use_config/rp2040_pointing_modes/: keyboard.toml
examples/use_config/rp2040_rynk/: Cargo.toml  build.rs  keyboard.toml
examples/use_config/rp2040_rynk/.cargo/: config.toml
examples/use_config/rp2040_split/: Cargo.toml  keyboard.toml
examples/use_config/rp2040_split_pio/: Cargo.toml  keyboard.toml
examples/use_config/stm32f1/: keyboard.toml
examples/use_config/stm32f4/: Cargo.toml  keyboard.toml
examples/use_config/stm32h7/: Cargo.toml  keyboard.toml
examples/use_rust/custom_lighting/: Cargo.toml
examples/use_rust/esp32c3_ble/: Cargo.toml
examples/use_rust/esp32s3_ble/: Cargo.toml
examples/use_rust/nrf52832_ble/: Cargo.toml
examples/use_rust/nrf52840/: Cargo.toml
examples/use_rust/nrf52840_ble/: Cargo.toml  vial.json
examples/use_rust/nrf52840_ble_split/: Cargo.toml  vial.json
examples/use_rust/nrf52840_embassy_boot/: Cargo.toml
examples/use_rust/nrf54l15_ble/: Cargo.toml
examples/use_rust/nrf54lm20_ble/: Cargo.toml  README.md
examples/use_rust/pi_pico_w_ble/: Cargo.toml
examples/use_rust/pi_pico_w_ble_split/: Cargo.toml
examples/use_rust/qemu-riscv-rynk/: Cargo.toml
examples/use_rust/rp2040_dfu_split/: .gitignore  Cargo.toml  Makefile.toml
examples/use_rust/rp2040_direct_pin/: Cargo.toml
examples/use_rust/rp2040_embassy_boot/: Cargo.toml
examples/use_rust/rp2040_embassy_boot_split/: Cargo.toml
examples/use_rust/rp2040_oled/: Cargo.toml
examples/use_rust/rp2040_split/: Cargo.toml
examples/use_rust/rp2350/: Cargo.toml
examples/use_rust/sf32lb52x_ble/: Cargo.toml
examples/use_rust/stm32f1/: Cargo.toml
examples/use_rust/stm32g4/: Cargo.toml
examples/use_rust/stm32h7/: Cargo.toml
rmk/: CHANGELOG.md  Cargo.toml  build.rs
rmk-config/: Cargo.toml
rmk-config/src/: behavior.rs  board.rs  chip.rs  communication.rs  display.rs  duration.rs  event.rs  host.rs  input_device.rs  keymap.pest  keymap.rs  layout.rs  lib.rs  light.rs  storage.rs  usb_interrupt_map.rs
rmk-config/src/default_config/: event_default.toml  nrf52810.toml  nrf52832.toml  nrf54l15.toml  nrf54lm20.toml  subscriber_default.toml
rmk-config/src/resolved/: behavior.rs  build_constants.rs  capabilities.rs  features.rs  hardware.rs  host.rs  keymap.rs  layout.rs  lighting.rs  mod.rs
rmk-config/tests/: examples_resolve.rs  keyboard_toml_validation.rs
rmk-macro/: Cargo.toml  build.rs
rmk-macro/src/: lib.rs
rmk-macro/src/codegen/: action_parser.rs  behavior.rs  display.rs  entry.rs  feature.rs  keyboard_config.rs  keymap.rs  lighting.rs  matrix.rs  mod.rs  orchestrator.rs  override_helper.rs  registered_processor.rs  watchdog.rs
rmk-types/: Cargo.toml  build.rs
rmk-types/src/: connection.rs  dfu.rs  fmt.rs  fork.rs  led_indicator.rs  lib.rs  modifier.rs  morse.rs  mouse_button.rs
rmk/src/: boot.rs  channel.rs  crc32.rs  fmt.rs  helper_macro.rs  hid.rs  keyboard.rs  keyboard_macros.rs  keymap.rs  keymap_ops.rs  layout_macro.rs  lib.rs  matrix.rs  physical_layout.rs  shared_flash.rs  sim.rs  split_app.rs  state.rs  test_support.rs  vendor_transport.rs
rmk/tests/: keyboard_bilateral_test.rs  keyboard_combo_test.rs  keyboard_layer_test.rs  keyboard_macro_test.rs  keyboard_morse_hold_on_other_press_test.rs  keyboard_morse_hrm_test.rs  keyboard_morse_permissive_hold_test.rs  keyboard_morse_tap_dance_test.rs  keyboard_morse_test.rs  keyboard_one_shot_test.rs  keyboard_passkey_test.rs  rynk_hid_loopback.rs  rynk_loopback.rs  simulator_test.rs
rynk/: Cargo.toml  README.md
rynk/docs/: host-concurrency-design.md
rynk/examples/: hw_test.rs  qemu_behavior.rs
rynk/rynk-ble/: Cargo.toml  README.md
rynk/rynk-ble/src/: lib.rs
rynk/rynk-kle/: Cargo.toml  README.md
rynk/rynk-kle/src/: kle.rs  lib.rs  to_kle.rs  to_layout.rs
rynk/rynk-kle/tests/fixtures/: ansi60_splitbs.json  balice65.json  kle_pad_rowcol.json
rynk/rynk-serial/: Cargo.toml  README.md
rynk/rynk-serial/src/: lib.rs
rynk/rynk-wasm/: Cargo.toml  README.md  index.html  wasm-smoke.ts
rynk/rynk-wasm/bindings/: rynk.d.ts
rynk/rynk-wasm/src/: client.rs  device.rs  lib.rs  transport.rs
rynk/src/: api.rs  device.rs  driver.rs  layout.rs  lib.rs  transport.rs
rynk/src/driver/: tests.rs
rynk/tests/: loopback.rs
scripts/: check_sim_tests.sh  fetch_all.sh  format_all.sh  test_all.sh
(+231 files in other folders)
