[package]
name = "rynk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Runtime-free host-side Rynk protocol client"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["keyboard", "firmware", "rmk", "protocol", "host"]

[dependencies]
# No `host` by default: a dongle binary links rmk (firmware) and rynk together, and
# feature unification must not switch the firmware's bulk types to alloc Vec.
rmk-types = { path = "../rmk-types", default-features = false, features = ["rynk", "_ble", "split", "steno"] }
embedded-io-async.workspace = true
embassy-sync.workspace = true
embassy-futures = "0.1"
postcard = { version = "1.1", default-features = false, features = ["experimental-derive"] }
serde.workspace = true
thiserror = { version = "2.0", default-features = false }
log.workspace = true
heapless = { version = "0.9", default-features = false, features = ["serde"] }
miniz_oxide = { version = "0.9", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
tsify = { version = "0.5", optional = true, default-features = false, features = ["js"] }

[features]
default = ["std"]
std = ["alloc"]
# Unbounded payloads (rmk-types `host`), layout decode, and whole-resource pagers.
# Without it the client is no-alloc: frames live in heapless buffers sized by
# `rmk_types::constants::RYNK_BUFFER_SIZE`.
alloc = ["rmk-types/host", "postcard/alloc", "dep:miniz_oxide"]
# Enable rmk-types' wasm/TS type generation (tsify). Turned on by the rynk-wasm build.
wasm = ["std", "rmk-types/wasm", "dep:wasm-bindgen", "dep:js-sys", "dep:tsify"]
# TODO(rynk redesign): gate for examples until rynk-serial/rynk-ble are ported to
# the Client + Driver API; never enabled by default.
_examples = []

[[example]]
name = "hw_test"
required-features = ["_examples"]

[[example]]
name = "qemu_behavior"
required-features = ["_examples"]

[dev-dependencies]
rmk = { path = "../rmk", default-features = false, features = [
    "std",
    "log",
    "rynk",
    "storage",
    "_ble",
    "split",
    "steno",
] }
rmk-config = { path = "../rmk-config" }
# TODO: remove once an embassy-usb release drops the stale `dep:ssmarshal`.
ssmarshal = { version = "1.0", features = ["std"] }
embassy-sync = "0.8"
embassy-futures = "0.1"
critical-section = { version = "1.2", features = ["std"] }
tokio = { version = "1.47", features = ["test-util", "macros", "net", "rt", "rt-multi-thread", "time"] }

# TODO(rynk redesign): restore once rynk-ble/rynk-serial are ported to the new
# Client + Driver API (they are only used by the `_examples`-gated examples).
# rynk-ble = { path = "rynk-ble" }
# rynk-serial = { path = "rynk-serial" }
env_logger = "0.11"

[workspace]
resolver = "2"
members = [
    "rynk-serial",
    "rynk-ble",
    "rynk-wasm",
    "rynk-kle",
]
default-members = [
    ".",
    "rynk-serial",
    "rynk-ble",
    "rynk-kle",
]

[workspace.package]
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Host-side tooling for the Rynk protocol — RMK's native host communication channel"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/haobogu/rmk"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
rmk-types = { path = "../rmk-types", features = ["host"] }
embassy-sync = "0.8"
embedded-io-async = "0.7"
embedded-io-adapters = "0.7"
postcard = { version = "1.1", default-features = false, features = ["experimental-derive", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "2.0"
log = "0.4"
tokio = "1.47"
tokio-serial = "5.4"
bluest = "0.6"
futures-util = "0.3"
