[package]
name = "rynk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Runtime-free host-side Rynk protocol client"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["keyboard", "firmware", "rmk", "protocol", "host"]

[dependencies]
rmk-types = { workspace = true, features = ["rynk", "_ble", "split", "steno"] }
embedded-io-async.workspace = true
embassy-sync.workspace = true
embassy-futures = "0.1"
critical-section = { version = "1.2", default-features = false }
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
miniz_oxide = { version = "0.9", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
tsify = { version = "0.5", optional = true, default-features = false, features = ["js"] }

[features]
default = ["std"]
alloc = ["rmk-types/host", "postcard/alloc", "serde/alloc", "dep:miniz_oxide"]
std = ["alloc", "critical-section/std", "thiserror/std"]
# Enable rmk-types' wasm/TS type generation (tsify). Turned on by the rynk-wasm build.
wasm = ["std", "rmk-types/wasm", "dep:wasm-bindgen", "dep:js-sys", "dep:tsify"]

[dev-dependencies]
rmk = { path = "../rmk", default-features = false, features = [
    "std",
    "log",
    "rynk",
    "storage",
    "_ble",
    "split",
    "steno",
] }
rmk-config = { path = "../rmk-config" }
# TODO: remove once an embassy-usb release drops the stale `dep:ssmarshal`.
ssmarshal = { version = "1.0", features = ["std"] }
embassy-sync = "0.8"
embassy-futures = "0.1"
tokio = { version = "1.47", features = ["test-util", "macros", "net", "rt", "rt-multi-thread", "time"] }

rynk-ble = { path = "rynk-ble" }
rynk-serial = { path = "rynk-serial" }
env_logger = "0.11"
heapless = { version = "0.9", features = ["serde"] }

[workspace]
resolver = "2"
members = [
    "rynk-serial",
    "rynk-ble",
    "rynk-wasm",
    "rynk-kle",
]
default-members = [
    ".",
    "rynk-serial",
    "rynk-ble",
    "rynk-kle",
]

[workspace.package]
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Host-side tooling for the Rynk protocol — RMK's native host communication channel"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/haobogu/rmk"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
rmk-types = { path = "../rmk-types" }
embassy-sync = "0.8"
embedded-io-async = "0.7"
embedded-io-adapters = "0.7"
postcard = { version = "1.1", default-features = false, features = ["experimental-derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
log = "0.4"
tokio = "1.47"
tokio-serial = "5.4"
bluest = "0.6"
futures-util = "0.3"
