[package]
name = "rynk-kle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Convert a KLE layout or Vial keyboard definition (vial.json) into an RMK/Rynk [layout] and back, and decode layouts into rynk's host types"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["keyboard", "rmk", "kle", "vial", "layout"]

# `cdylib` is what `wasm-pack build --features wasm` packages; native
# consumers (the `rmkit` CLI) link the rlib.
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde.workspace = true
serde_json = "1"
# Upstream KLE deserializer — does the cursor walk (positions, sizes, rotation,
# legend normalization) so we don't hand-roll it.
kle-serial = "0.3"
# Build and decode layout blobs through the firmware/host path.
rmk-config = { path = "../../rmk-config" }
rynk = { path = ".." }
toml = "1.0"

wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
# JS-facing bindings; build the package with `wasm-pack build --features wasm`.
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]
