[package]
name = "rmk-rp2040-rynk"
version = "0.2.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# Rynk is RMK's default host protocol (served here over USB-CDC), so no `vial`.
rmk = { path = "../../../rmk", default-features = false, features = ["defmt", "storage", "rynk", "watchdog", "rp2040"] }
embassy-time = { version = "0.5", features = ["defmt"] }
embassy-rp = { version = "0.10", features = [
    "rp2040",
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
cortex-m-rt = "0.7.5"
portable-atomic = { version = "1", features = ["critical-section"] }
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

[[bin]]
name = "rmk-rp2040-rynk"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
